# naoland

./: .clang-format  .gitignore  README.md  meson.build
.github/workflows/: build.yml
comp/: config.cpp  config.hpp  foreign_toplevel.cpp  foreign_toplevel.hpp  main.cpp  meson.build  output.cpp  output.hpp  renderer.cpp  server.cpp  server.hpp  types.hpp  util.cpp  util.hpp  wlr-wrap-start.hpp  xwayland.cpp  xwayland.hpp
comp/input/: constraint.cpp  constraint.hpp  cursor.cpp  cursor.hpp  keyboard.cpp  keyboard.hpp  seat.cpp  seat.hpp  tablet.cpp  tablet.hpp
comp/protocols/: meson.build
comp/rendering/: animation.cpp  animation.hpp  renderer.cpp  renderer.hpp
comp/surface/: layer.cpp  layer.hpp  popup.cpp  popup.hpp  surface.hpp  view.cpp  view.hpp  xdg_view.cpp  xwayland_view.cpp
